[tool.poetry]
name = "workshop-dbt-bigquery"
version = "0.1.0"
description = ""
authors = ["LucianoBorba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.2"
dbt-bigquery = "^1.8.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
sqlfluff = "^3.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
